--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,283 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+  margin: 0px 40px 0px 40px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+* {
+  box-sizing: border-box;
+}
+.container {
+}
+.column1 {
+  display: flex;
+  justify-content: space-between;
+}
+nav {
+  margin: 20px 0;
+  font-size: 18px;
+}
+nav a {
+  color: grey;
+  text-decoration-line: none;
+  margin-left: 20px;
+}
+nav .first-anchor {
+  margin-left: 0;
+}
+.column2 {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+  margin: 20px 0;
+}
+.column3 {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+}
+.item1 {
+  margin-right: 12px;
+}
+.column4 {
+  margin: 20px 0;
+}
+.column5 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.column6 {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+  align-content: space-between;
+}
+div .logo {
+  padding: 10px;
+}
+h1 {
+  font-size: 75px;
+  text-align: center;
+  padding-top: 50px;
+}
+h2 {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 20px;
+}
+button {
+  margin: 0 25%;
+  padding: 10px;
+  background-color: white;
+  color: grey;
+  border: 2px solid grey;
+  border-radius: 12px;
+  font-size: 20px;
+}
+.learnMore {
+  margin: 10px 0;
+  padding: 5px;
+  background-color: white;
+  color: grey;
+  border: 2px solid grey;
+  border-radius: 12px;
+  font-size: 15px;
+}
+
+footer {
+  text-align: center;
+  color: grey;
+  margin: 30px 0;
+}
+p {
+  color: rgb(82, 79, 79);
+}
+.text-space {
+  margin: 10px 0;
+}
+
+.content {
+  margin: 20px 0;
+}
+
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  align-content: space-around;
+}
+.box {
+  background-color: darkgrey;
+  border: 2px solid grey;
+  margin: 5px 0;
+  width: 425px;
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 20px;
+  align-self: right;
+}
+
+ul {
+  list-style-type: circle;
+  margin: 25px;
+  color: grey;
+}
+.vision {
+  margin: 20px;
+}
+
+@media (max-width: 600px) {
+  div {
+    display: flex;
+    flex-flow: wrap;
+  }
+}
